fix: some bugs, including a 500 error when trying to tabulate b4 votes are cast
